--- a/package.json
+++ b/package.json
@@ -5,35 +5,36 @@
     "dev": "next dev",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
+    "seed": "node -r dotenv/config ./scripts/seed.js",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.10.5",
     "@vercel/postgres": "^0.5.1",
-    "autoprefixer": "10.4.16",
-    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "^14.0.4",
-    "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.0",
-    "typescript": "5.3.3",
-    "zod": "^3.22.4"
+    "tailwindcss": "3.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@vercel/style-guide": "^5.1.0",
+    "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "9.1.0",
+    "postcss": "8.4.32",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.10"
+    "prettier-plugin-tailwindcss": "0.5.10",
+    "typescript": "5.3.3",
+    "zod": "^3.22.4"
   },
   "engines": {
     "node": ">=18.17.0"
